@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/10/2018
+  * added updateJobsInBulk
+
 * 4/9/2018
   * added nJobs and computingElement to workers
 
